--- a/client/angular.json
+++ b/client/angular.json
@@ -62,8 +62,8 @@
         "serve": {
           "options": {
             "ssl": true,
-            "sslKey": "ssl/server.key",
-            "sslCert": "ssl/server.crt"
+            "sslCert": "./ssl/localhost.pem",
+            "sslKey": "ssl/localhost-key.pem"
           },
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
